tests/pos/Tyvar.hs
module Tyvar () where

{-@ foo :: Eq b => a -> b -> a @-}
foo :: Eq b => a -> b -> a
foo = undefined
