tests/errors/ReWrite6.hs
module ReWrite6 where

-- Reject non equalities
{-@ rewrite bad @-}
{-@ bad :: {1 < 2} @-}
bad :: ()
bad = ()
